Removed key and secret from demo.

--- a/examples/javascript/sample.html
+++ b/examples/javascript/sample.html
@@ -11,8 +11,8 @@
 		var token;
 		var grant = { 
 			grant_type: "client_credentials", 
-			client_id: "538de74b4efd3a5732d73338", 
-			client_secret: "pfa4tC0apn7UrEvtzU1P" 
+			client_id: "< your client key >", 
+			client_secret: "< your client secret >" 
 		};
 		var host = {
 			auth: 'https://auth.mappedin.com',
