fix leaflet cdn path and perspective name

--- a/examples/website-integration/sample.html
+++ b/examples/website-integration/sample.html
@@ -2,8 +2,8 @@
 <html>
 <head> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -50,7 +50,7 @@
 
 	</div>
 	<script>
-		var perspectiveName = "Main";
+		var perspectiveName = "Main Kiosk";
 		var venueId = 'mappedin-mall';
 		// Authenticate with the API keys with the MappedIn server
 		var grant = { 
