Added some basic occlusion filtering for markers. If you select a category, markers with venue names will be displayed in the order they are added, as long as they don't overlap with a previous marker.

--- a/examples/website-integration/sample.html
+++ b/examples/website-integration/sample.html
@@ -16,8 +16,12 @@
 	<script src="./projective.js"></script>
 	<script src="./externals/numeric.js"></script>
 	<script src="./externals/lodash.js"></script>
+	<script src="./externals/rbush.js"></script>
+	<script src="./externals/Leaflet.LayerGroup.Collision.js"></script>
 
 	<script src="./sample.js"></script>
+
+}
 </head>
 <body>
 	<div class="container">
