Tidied up token.html so it looked a little bit nicer

--- a/examples/website-integration/sample.html
+++ b/examples/website-integration/sample.html
@@ -53,7 +53,7 @@
 		var perspectiveName = "Main Kiosk";
 		var venueId = 'mappedin-mall';
 		
-		// DEV/TESTING: Use the Token.html utility to retrieve your 48h API access token.
+		// DEV/TESTING: Use the token.html utility to retrieve your 48h API access token. Paste the results in here as the definition for token
 		// PROCUTION: Retrieve the access token dynamically from your server, which holds your API key and secret and does the OATH authentication itself
 		var token = {}
 
