Switched to rendering on a pre-defined canvas to make it easier to layout in HTML

--- a/examples/3d-map/index.html
+++ b/examples/3d-map/index.html
@@ -9,7 +9,7 @@
 		</style>
 	</head>
 	<body>
-		<div id="container"></div>
+		<canvas id="mapView" width="500" height="500"></canvas>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="./MappedIn.js"></script>
 		<script src="externals/three.min.js"></script>
@@ -22,9 +22,9 @@
 		
 			// DEV/TESTING: Use the token.html utility to retrieve your 48h API access token. Paste the results in here as the definition for token
 			// PROCUTION: Retrieve the access token dynamically from your server, which holds your API key and secret and does the OATH authentication itself
-			var token = {}
+			MappedIn.token = {}
 
-			if (Object.keys(token).length == 0) {
+			if (Object.keys(MappedIn.token).length == 0) {
 				document.write("EMTPY TOKEN! For testing you can use Token.html to calculate your temporary access token, and paste it into sample.html")
 			}
 			init(venueId);
