Split data model out into MappedIn.Venue object

--- a/examples/3d-map/index.html
+++ b/examples/3d-map/index.html
@@ -12,6 +12,7 @@
 		<canvas id="mapView" width="500" height="500"></canvas>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="./MappedIn.js"></script>
+		<script src="./MappedIn.Venue.js"></script>
 		<script src="externals/three.min.js"></script>
 		<script src="externals/loaders/MTLLoader.js"></script>
 		<script src="externals/loaders/OBJLoader.js"></script>
