Split Map View into it's own class for better organization and modularity

--- a/examples/3d-map/index.html
+++ b/examples/3d-map/index.html
@@ -13,6 +13,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="./MappedIn.js"></script>
 		<script src="./MappedIn.Venue.js"></script>
+		<script src="./MappedIn.MapView.js"></script>
 		<script src="externals/three.min.js"></script>
 		<script src="externals/loaders/MTLLoader.js"></script>
 		<script src="externals/loaders/OBJLoader.js"></script>
