Experiments in text placement

--- a/examples/3d-map/index.html
+++ b/examples/3d-map/index.html
@@ -16,16 +16,15 @@
 		<script src="./MappedIn.Venue.js"></script>
 		<script src="./MappedIn.Map.js"></script>
 		<script src="./MappedIn.MapView.js"></script>
+		<script src="./MappedIn.CameraControls.js"></script>
 		<script src="externals/three.js"></script>
 		<script src="externals/matter.js"></script>
 		<script src="externals/loaders/MTLLoader.js"></script>
 		<script src="externals/loaders/OBJLoader.js"></script>
-		<script src="externals/loaders/SVGLoader.js"></script>
 		<script src="externals/Projector.js"></script>
-		<script src="externals/OrbitControls.js"></script>
 		<script src="./index.js"></script>
 		<script>
-			var venueId = 'paul-test';
+			var venueId = '';
 		
 			// DEV/TESTING: Use the token.html utility to retrieve your 48h API access token. Paste the results in here as the definition for token
 			// PROCUTION: Retrieve the access token dynamically from your server, which holds your API key and secret and does the OATH authentication itself
