Included promise.js, removed jquery

--- a/examples/3d-map/index.html
+++ b/examples/3d-map/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="externals/promise.js"></script>
 		<script src="./MappedIn.js"></script>
 		<script src="./MappedIn.Venue.js"></script>
 		<script src="./MappedIn.Map.js"></script>
@@ -29,9 +29,9 @@
 			// DEV/TESTING: Use the token.html utility to retrieve your 48h API access token. Paste the results in here as the definition for token
 			// PROCUTION: Retrieve the access token dynamically from your server, which holds your API key and secret and does the OATH authentication itself
 			MappedIn.token = {}
-			
+
 			if (Object.keys(MappedIn.token).length == 0) {
-				document.write("EMTPY TOKEN! For testing you can use Token.html to calculate your temporary access token, and paste it into sample.html")
+				document.write("EMTPY TOKEN! For testing you can use Token.html to calculate your temporary access token, and paste it into index.html")
 			}
 			init(venueId);
 		</script>
