--- a/examples/website-integration-polygon/sample.html
+++ b/examples/website-integration-polygon/sample.html
@@ -57,8 +57,8 @@
 		var venueId = 'test-venue-daniel';
 		
 		// DEV/TESTING: Use the token.html utility to retrieve your 48h API access token. Paste the results in here as the definition for token
-		// PROCUTION: Retrieve the access token dynamically from your server, which holds your API key and secret and does the OATH authentication itself
-		var token = {}}
+		// PRODUTION: Retrieve the access token dynamically from your server, which holds your API key and secret and does the OATH authentication itself
+		var token = {};
 
 		if (Object.keys(token).length == 0) {
 			document.write("EMTPY TOKEN! For testing you can use Token.html to calculate your temporary access token, and paste it into sample.html")
