Added missing analytics and search docs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/custom.css">
     <link rel="stylesheet" href="./assets/css/lucid.css">
     <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="shortcut icon" type="image/png" href="../assets/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png">
 </head>
 <body class="yui3-skin-sam">
 <div class="navbar navbar-fixed-top">
@@ -123,7 +123,7 @@
                                             </a>
                                         </li>
                                         <li class="module-class">
-                                            <a href="../classes/Tween.html">
+                                            <a href="./classes/Tween.html">
                                                 Tween
                                             </a>
                                         </li>
